<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >



    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:id="@+id/fragmentContainer"
        />


    <Button
        android:id="@+id/listOfJokes"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_green"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="62dp"
        android:text="@string/list" />

    <Button
        android:id="@+id/joke"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_blue"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="63dp"
        android:text="@string/joke" />

    <Button
        android:id="@+id/logout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_blue"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="4dp"
        android:text="@string/wyloguj" />

    <Button
        android:id="@+id/moja_lista"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_green"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/my_list" />
</RelativeLayout>

