<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextTextEmailAddressRegister"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/button_blue2"
        android:textColor="@color/black"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <EditText
        android:id="@+id/editTextTextPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@drawable/button_blue2"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressRegister"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="209dp"
        android:layout_height="81dp"
        android:background="@drawable/button_blue"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordRegister"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/back"
        android:layout_width="209dp"
        android:layout_height="81dp"
        android:text="@string/back"
        android:textColor="@color/purple_700"
        android:background="@drawable/button_blue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordRegister"
        app:layout_constraintVertical_bias="0.721" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="328dp"
        android:layout_height="94dp"
        android:layout_gravity="center_vertical"
        android:foreground="?android:attr/selectableItemBackground"
        android:outlineProvider="background"
        android:padding="8dp"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/create_account"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />



</androidx.constraintlayout.widget.ConstraintLayout>